# Rust-Playground

./: .gitignore  README.md
0_rust/: cheetsheet.md  concurrency.md  doubts.md  errors.md  generics.md  lifetime.md  ownership.md  smart_pointers.md  traits.md  types.md
counter/: Cargo.toml  README.md
counter/src/: main.rs  metrics.rs
criterion/: Cargo.toml  README.md
flamegraph/: README.md
flamegraph/src/: main.rs
graphql/: Cargo.toml  README.md  readme.md
graphql/src/: main.rs
grpc/: Cargo.toml  README.md  readme.md
grpc/proto/: hello.proto
grpc/src/: client.rs  server.rs
kv-store/: Cargo.toml  README.md  take_a_look
kv-store/src/: main.rs
otel/: Cargo.toml  README.md  curl.md  log.txt  run.sh  try.coffee  try.yaml
otel/src/: handler.rs  main.rs  metrics.rs
otel/study/: explain.md  study1.md  study2.md
plots/: Cargo.toml  README.md  temp
race/: Cargo.toml  README.md
race/src/: main.rs
ratatui/: Cargo.toml  README.md  readme.md
ratatui/src/: main.rs
rss/: README.md  test.sh  test2.sh
rss/src/: main.rs
rust-basics/: Cargo.toml  README.md
rust-basics/src/: main.rs
sorting/: Cargo.toml  README.md
sorting/src/: main.rs
webhook-listner/: Cargo.toml  README.md
webhook-listner/src/: main.rs
