[package]
name = "grpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
tonic = { version = "0.11", features = ["transport"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
prost = "0.12"
prost-types = "0.12"

[build-dependencies]
tonic-build = "0.11"
