[package]
name = "otel"
version = "0.1.0"
edition = "2024"

[dependencies]
clickhouse = "0.11.0"
reqwest = { version = "0.11", features = ["stream", "json", "rustls-tls"] }
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
uuid = { version = "1.0", features = ["v4"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_derive = "1.0"
urlencoding = "2.1"
regex = "1.0"
function_name = "0.3.0"
anyhow = "1.0.98"
meval = "0.2"
protoc-rust = "2.28.0"
protobuf = { version = "2.28.0", features = ["with-bytes"] }
bytes = "1"
futures = "0.3"
serde_path_to_error = "0.1"
dh_otel = {version = "1.0.0", registry = "kellnr-dh-libraries"}
 
[features]
default = ["client_default"]
client_default = []
client_hdfc = []